--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.4.2",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
