--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "@babel/plugin-proposal-private-property-in-object":"7.21.11"
   }
 }
