--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,13 @@
     "dev": "dotenv nodemon ./bin/www --inspect"
   },
   "dependencies": {
+    "aws-sdk": "^2.1431.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
@@ -19,6 +21,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
